2025-05-23 Gabriele Gorla <gorlik@yahoo.com>

   	* src/mos6502/peeph.def:
   	  Improve load after load and store after store rules.
   	
   	
2025-05-21 Gabriele Gorla <gorlik@yahoo.com>

   	* src/mos6502/gen.h,
   	  src/mos6502/gen.c,
   	  src/mos6502/genand.c,
   	  src/mos6502/genor.c,
   	  src/mos6502/genxor.c,
   	  src/mos6502/genplus.c,
   	  src/mos6502/genminus.c,
   	  src/mos6502/genlshift.c,
  	  src/mos6502/genrshift.c,
   	  src/mos6502/stackops.c,
   	  src/mos6502/tempops.c:
   	  Code refactoring to improve maintainability.
 	* src/mos6502/gen.c,
   	  src/mos6502/genplus.c,
   	  src/mos6502/genminus.c:
   	  genPlus and genMinus improvements.
   	  
2025-05-20 Gabriele Gorla <gorlik@yahoo.com>

   	* src/mos6502/gen.c:
   	  genRightShift improvements.
   	  
2025-05-19 Gabriele Gorla <gorlik@yahoo.com>

   	* src/mos6502/gen.c:
   	  Additional DPTR optimizations.

2025-05-16 Gabriele Gorla <gorlik@yahoo.com>

   	* src/mos6502/gen.c:
   	  Small genPointerGet improvement.

2025-05-15 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/peeph.def:
  	  Remove dead XY rule. Add genPlus/Minus optimization.
   	* src/mos6502/gen.c:
   	  Enable tracking of regTemp loads/stores.
  	  Enable tracking of other regTemp operations.
  	  
2025-05-13 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos65c02/_strlen.s,
  	  device/lib/mos65c02/strlen.s,
  	  device/lib/mos65c02/memcpy.s,
  	  device/lib/mos65c02/strcmp.s,
  	  device/lib/mos65c02/_setjmp.s,
  	  device/lib/mos65c02/_mullong.s,
  	  device/lib/mos65c02/_milint.s,
  	  device/lib/mos65c02/memcpy.s:
  	  Update mos65c02 library based on mos6502 improvements.
  	* device/lib/mos6502/_setjmp.s,
  	  device/lib/mos6502/_fsmul.s:
  	  Minor cleanup.
  	* src/mos6502/gen.c:
  	  Improve handling of volatile in loadRegFromAop().
  	  Improve register selection in genPointerSet().
  	
2025-05-12 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/_fslt.s,